--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -7,7 +7,7 @@ import TestimonialItem from './TestimonialItem.astro';
 
 const { section: { id, title, subtitle, html: content, items } } = Astro.props as Props;
 ---
-<PageSection id={id} title={title} subtitle={subtitle} content={content} classes="text-center bg-light">
+<PageSection id={id} title={title} subtitle={subtitle} content={content} classes="text-center bg-light" contentToBottom={true}>
   <div class="grid gap-12 lg:grid-cols-3">
     {items?.map((item) => <TestimonialItem item={item} />)}
   </div>
