--- a/src/components/PageSection.astro
+++ b/src/components/PageSection.astro
@@ -4,23 +4,26 @@ export interface Props {
   title?: string;
   subtitle?: string;
   content?: string;
+  contentToBottom?: boolean;
   classes?: string;
 }
 
 import Container from '@/components/Container.astro';
 
-const { id, title, subtitle, content, classes = '' } = Astro.props as Props;
----
+const SECTION_ITEM_CLASS = 'section-item';
 
-<section id={id} class={`py-24 lg:py-36 text-center ${classes}`}>
+const { id, title, subtitle, content, contentToBottom = false, classes = '' } = Astro.props as Props;
+---
+<section id={id} class={`${SECTION_ITEM_CLASS} py-24 lg:py-36 text-center ${classes}`}>
   <Container>
     {(title || subtitle) && (
       <div class="flex flex-col-reverse">
-        {title && <h2 class="mb-18 text-lg">{subtitle}</h2>}
-        {subtitle && <div class="mt-0 mb-8 font-normal text-xl uppercase text-center divider">{title}</div>}
+        {title && <h2 class="mb-18 text-lg text-muted">{subtitle}</h2>}
+        {subtitle && <div class="mb-8 font-bold text-xl uppercase text-center divider">{title}</div>}
       </div>
     )}
-    {content && <div class="mb-18 text-justify" set:html={content} />}
+    {(content && !contentToBottom) && <div class="mb-18 text-center text-muted" set:html={content} />}
     <slot />
+    {(content && contentToBottom) && <div class="mt-18 text-center text-muted" set:html={content} />}
   </Container>
 </section>
