--- a/src/components/Top.astro
+++ b/src/components/Top.astro
@@ -5,32 +5,35 @@ export interface Props {
 
 import fetchTop from '@/api/fetchTop';
 import getImagePath from '@/lib/getImagePath';
-import Image from '@/components/Image.astro';
+import ArtImage from '@/components/ArtImage.astro';
+import Button from './Button.astro';
 
 const { locale } = Astro.props as Props;
 
 const top = await fetchTop(locale);
 
 const { title, subtitle, items } = top ? top[0] : {};
-const image = items ? items[0].image : null;
+const sources = items?.map(({ image: { src, caption }}) => ({ src: getImagePath(src), media: caption }));
 ---
 <div class="grid">
-  {image?.src && (
-    <Image src={getImagePath(image.src)} alt={image.alt} classes="col-start-1 row-start-1" caption={image.caption} />
+  {sources && (
+    <ArtImage sources={sources} alt={items[0].image.alt } classes="col-start-1 row-start-1" />
   )}
-  <div class="title text-lg md:mb-9 md:text-xl lg:text-2xl">{title}</div>
+  <div class="col-start-1 row-start-1 center flex flex-col-reverse justify-center items-center">
+    <Button as="a" to="#services">hello</Button>
+    <h1 class="text uppercase font-bold text-3xl md:mb-6 md:text-4xl lg:text-6xl">{title}</h1>
+    {subtitle && <div class="text mb-8 text-2xl italic">{subtitle}</div>}
+  </div>
 </div>
 
 <style>
-.title {
-  grid-area: 1/1;
-  align-self: end;
+.center {
+  align-self: center;
   justify-self: center;
-  margin-bottom: 2rem;
-
-  color: white;
   text-align: center;
-  text-transform: uppercase;
+}
+.text {
+  color: white;
   text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
 }
 </style>
