--- a/src/components/sections/TestimonialItem.astro
+++ b/src/components/sections/TestimonialItem.astro
@@ -7,9 +7,14 @@ import getImagePath from '@/lib/getImagePath';
 import Image from '@/components/Image.astro';
 
 const { item: { title, subtitle, content, image } } = Astro.props as Props;
+
+const src = getImagePath(image.src);
+const alt = image?.alt || title || content;
 ---
 <div class="text-center mb-12">
-  {image?.src && <Image src={getImagePath(image.src)} alt={image.alt || title || content} classes="mx-auto mb-3 w-56 h-56 border-4 rounded-full" caption={image.caption} />}
+  {image?.src && (
+    <Image src={src} alt={alt} classes="mb-3" imgClasses="w-56 h-56 mx-auto border-4 rounded-full" caption={image.caption} />
+  )}
   <div class="mb-4 text-muted">{content}</div>
   <div class="text-sm text-muted before:content-['-']">
     {title}{subtitle && <cite>{`, ${subtitle}`}</cite>}
