feature: env IMAGE_FORMATS

--- a/src/components/ArtImage.astro
+++ b/src/components/ArtImage.astro
@@ -18,7 +18,7 @@ const { sources, alt = '', options = {}, sizes = '100vw', classes = '', imgClass
 const opts = {
   ...options,
   widths: [null],
-  formats: ['avif', 'webp', 'jpg'],
+  formats: import.meta.env.IMAGE_FORMATS.split(','),
   sharpWebpOptions: {
     quality,
   },
