--- a/src/components/HomePage.astro
+++ b/src/components/HomePage.astro
@@ -1,12 +1,10 @@
 ---
 import fetchAllSections from '@/api/fetchAllSections';
 import { fetchHome } from '@/api/pages';
-import PageSection from '@/components/PageSection.astro';
 
-import Layout from '@/components/Layout/BaseLayout.astro';
+import Layout from '@/components/Layout.astro';
 
-import Top from './Top.astro';
-
+import Top from '@/components/Top.astro';
 import Services from '@/components/sections/Services.astro';
 import About from '@/components/sections/About.astro';
 import Gallery from '@/components/sections/Gallery.astro';
