--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -3,7 +3,7 @@ import i18n from '@/config/i18n';
 import getLocaleFromUrlPathname from '@/helpers/getLocaleFromUrlPathname';
 import { fetchContacts, fetchSocialLinks, fetchAddress } from '@/api/yamls';
 
-// import '../styles/global.css';
+import '../styles/global.css';
 
 import SEO from './SEO/SEO.astro';
 import Header from './header/Header.astro';
@@ -32,9 +32,11 @@ if (!currentLocale) {
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="preload" href="/assets/fonts/oswald-v36-cyrillic-700.woff2" as="font" type="font/woff2" crossOrigin="anonymous" />
+    <!---
     <style global>
       @import "../styles/global.css";
     </style>
+    -->
     <script defer src="/assets/scripts/main.js"></script>
   </head>
   <body>
