--- a/src/components/images/ArtImage.astro
+++ b/src/components/images/ArtImage.astro
@@ -26,7 +26,7 @@ const {
 const opts = {
   ...options,
   widths: [null],
-  formats: import.meta.env.IMAGE_FORMATS.split(','),
+  formats: process.env.IMAGE_FORMATS.split(','),
   sharpWebpOptions: {
     quality,
   },
