--- a/src/components/images/Image.astro
+++ b/src/components/images/Image.astro
@@ -32,7 +32,7 @@ const {
 const opts = {
   ...options,
   widths: [null],
-  formats: import.meta.env.IMAGE_FORMATS.split(','),
+  formats: process.env.IMAGE_FORMATS.split(','),
   sharpWebpOptions: {
     quality,
   },
