--- a/src/components/images/BaseImage.astro
+++ b/src/components/images/BaseImage.astro
@@ -1,5 +1,6 @@
 ---
 import escapeHTML from '@/lib/escapeHTML';
+import getImageFormats from '@/lib/getImageFormats';
 import { ImageOptions } from '../../astro-eleventy-img';
 import { getMetadata, getSrcset } from './utils';
 
@@ -17,7 +18,7 @@ const { src, alt = '', options = {}, sizes = '100vw', imgClasses = '', quality =
 const opts = {
   ...options,
   widths: [null],
-  formats: process.env.IMAGE_FORMATS.split(','),
+  formats: getImageFormats(),
   sharpWebpOptions: {
     quality,
   },
