--- a/src/components/images/Image.astro
+++ b/src/components/images/Image.astro
@@ -1,6 +1,7 @@
 ---
 import { Markdown } from 'astro/components';
 import escapeHTML from '@/lib/escapeHTML';
+import getImageFormats from '@/lib/getImageFormats';
 import { ImageOptions, generatePlaceholder, PlaceholderOptions } from '../../astro-eleventy-img';
 
 import { getMetadata, getSrcset } from './utils';
@@ -32,7 +33,7 @@ const {
 const opts = {
   ...options,
   widths: [null],
-  formats: process.env.IMAGE_FORMATS.split(','),
+  formats: getImageFormats(),
   sharpWebpOptions: {
     quality,
   },
