--- a/src/components/images/Image.astro
+++ b/src/components/images/Image.astro
@@ -33,7 +33,7 @@ const {
 const opts = {
   ...options,
   widths: [null],
-  formats: getImageFormats(),
+  formats: getImageFormats(import.meta.env.IMAGE_FORMATS),
   sharpWebpOptions: {
     quality,
   },
