--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -19,7 +19,7 @@ const {
 <footer class="py-4 text-sm bg-light">
   <Container>
     {socialLinks && (
-      <div class="flex flex-wrap justify-center my-12 w-full">
+      <div class="flex flex-wrap justify-center gap-4 my-12 w-full">
         <SocialLinks socialLinks={socialLinks} />
       </div>
     )}
