--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -1,14 +1,13 @@
 ---
+import '../styles/global.css';
+
 import i18n from '@/config/i18n';
 import getLocaleFromUrlPathname from '@/helpers/getLocaleFromUrlPathname';
 import { fetchContacts, fetchSocialLinks, fetchAddress } from '@/api/yamls';
 
-import '../styles/global.css';
 import SEO from './SEO/SEO.astro';
 import Header from './header/Header.astro';
 import Footer from './footer/Footer.astro';
-
-
 
 const locale = getLocaleFromUrlPathname(Astro.request.url.pathname);
 
@@ -30,19 +29,28 @@ if (!currentLocale) {
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <SEO seo={{ ...seo, contacts, socialLinks, address }} />
-
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="preload" href="/assets/fonts/oswald-v36-cyrillic-700.woff2" as="font" type="font/woff2" crossOrigin="anonymous" />
-    <!-- Ok in development -->
-    <script defer src="/assets/scripts/main.js"></script>
+    <script defer src="/assets/scripts/gumshoe.js"></script>
   </head>
   <body>
     <div class="flex flex-col min-h-screen">
       <Header />
-      <main class="w-full flex-auto mt-header pb-header lg:mt-header-xl lg:pb-header-xl">
+      <main class="w-full flex-auto mt-header pb-header lg:mt-0 lg:pb-header-xl">
         <slot />
       </main>
       <Footer contacts={contacts} socialLinks={socialLinks} address={address} />
     </div>
   </body>
 </html>
+
+<script hoist type="module">
+  const header = document.getElementById('header');
+
+  new Gumshoe('#menu-items a', {
+    offset() {
+		  return header.getBoundingClientRect().height;
+	  },
+    reflow: true,
+  });
+</script>
