--- a/src/components/header/components/LanguageSwitch.astro
+++ b/src/components/header/components/LanguageSwitch.astro
@@ -11,8 +11,8 @@ const locale = getLocaleFromUrlPathname(pathname);
 const currentLocale = i18n.locales[locale];
 
 ---
-<div class="relative">
-  <button id="language-selector" class="dropdown-toggle"><Icon class="w-4 h-4 mr-4" name="globe"/>{currentLocale.localName}</button>
+<div id="language-selector" class="nav-item language-selector">
+  <div class="dropdown-toggle"><Icon class="w-4 h-4 mr-2" name="globe"/>{currentLocale.localName}</div>
   <div id="language-dropdown" class="dropdown">
     {Object.keys(i18n.locales).map((code) => {
       let classes: string;
@@ -34,6 +34,12 @@ const currentLocale = i18n.locales[locale];
 </div>
 
 <style lang="scss">
+.language-selector {
+  position: relative;
+  &:hover .dropdown {
+    display: block;
+  }
+}
 .dropdown-toggle {
   display: none;
 
@@ -63,7 +69,7 @@ const currentLocale = i18n.locales[locale];
 .dropdown {
   display: flex;
   list-style: none;
-  margin: 1rem 0 0;
+  margin: 0;
   padding: 0;
 
   @media (min-width: 1024px) {
@@ -140,14 +146,3 @@ const currentLocale = i18n.locales[locale];
 }
 </style>
 
-<script>
-
-const toggle = document.getElementById('language-selector');
-const dropdown = document.getElementById('language-dropdown');
-
-const onClick = () => {
-  dropdown.classList.toggle('show');
-};
-toggle.addEventListener('click', onClick, false);
-
-</script>
