--- a/src/components/header/components/menu/Menu.astro
+++ b/src/components/header/components/menu/Menu.astro
@@ -10,18 +10,18 @@ const locale = getLocaleFromUrlPathname(pathname);
 const navItems = await fetchMainNav(locale);
 ---
 
-<nav id="main-menu" class="main-menu">
-  <div aria-label="Main menu" class="flex flex-col ml-auto lg:flex-row">
+<nav id="main-nav" class="main-nav">
+  <ul id="menu-items" aria-label="Main menu" class="flex flex-col ml-auto m-0 p-0 list-none lg:flex-row">
     {navItems.map(({ title, to }) => <NavItem to={to} title={title} />)}
-  </div>
+  </ul>
   <LanguageSwitch />
 </nav>
 
 <style>
-  .main-menu {
+  .main-nav {
     @apply hidden grow basis-full items-center py-4 lg:!flex lg:basis-auto lg:py-0;
   }
-  .main-menu.open {
+  .main-nav.open {
     @apply !block;
   }
 </style>
