--- a/src/components/header/components/menu/NavItem.astro
+++ b/src/components/header/components/menu/NavItem.astro
@@ -2,16 +2,20 @@
 export interface Props extends Link {}
 const { to, title } = Astro.props as Props;
 ---
-
-<a href={to} class="nav-item" role="menuitem">
-  {title}
-</a>
+<li class="nav-item">
+  <a href={to} data-scroll data-id={to} class="nav-item-link" role="menuitem">
+    {title}
+  </a>
+</li>
 
 <style global>
   .nav-item {
-    @apply at-a cursor-pointer py-2 px-4 text-sm font-normal uppercase tracking-wide text-white hover:text-primary lg:py-5 lg:px-4;
+    @apply py-2 px-4 lg:py-5 lg:px-4;
   }
-  .nav-item.active {
+  .nav-item-link {
+    @apply at-a cursor-pointer text-sm font-normal uppercase tracking-wide text-white hover:text-primary;
+  }
+  .nav-item.active a {
     @apply text-primary;
   }
 </style>
