--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -11,7 +11,7 @@ const {
 ---
 
 <PageSection id={id} title={title} subtitle={subtitle} content={content} classes="text-center bg-light" contentToBottom={true}>
-  <div class="grid gap-12 lg:grid-cols-3">
+  <ul class="grid gap-12 lg:grid-cols-3">
     {items?.map((item) => <TestimonialItem item={item} />)}
-  </div>
+  </ul>
 </PageSection>
