--- a/src/components/HomePage.astro
+++ b/src/components/HomePage.astro
@@ -1,5 +1,5 @@
 ---
-import fetchAllSections from '@/api/fetchAllSections';
+import { fetchSection } from '@/api/sections';
 import { fetchHome } from '@/api/pages';
 
 import Layout from '@/components/Layout.astro';
@@ -17,16 +17,14 @@ export interface Props {
 
 const { locale } = Astro.props as Props;
 
-const sections = await fetchAllSections(locale);
-
-const services = sections.find(({ id }) => id === 'services');
-const about = sections.find(({ id }) => id === 'about');
-const gallery = sections.find(({ id }) => id === 'gallery');
-const testimonials = sections.find(({ id }) => id === 'testimonials');
-const contacts = sections.find(({ id }) => id === 'contacts');
+const services = await fetchSection('services', locale);
+const about = await fetchSection('about', locale);
+const gallery = await fetchSection('gallery', locale);
+const testimonials = await fetchSection('testimonials', locale);
+const contacts = await fetchSection('contacts', locale);
 
 const page = await fetchHome(locale);
-const { title, headline, metaTitle, metaDescription, noindex, nofollow } = page;
+const { title, headline, metaTitle, metaDescription, noindex, nofollow } = page || {};
 
 const seo = {
   title: metaTitle,
