--- a/src/components/sections/ContactItem.astro
+++ b/src/components/sections/ContactItem.astro
@@ -10,10 +10,10 @@ import { Icon } from 'astro-icon';
 const { icon, to, title, text } = Astro.props as Props;
 ---
 
-<div class="flex flex-col items-center">
+<li class="flex flex-col items-center">
   <Icon name={icon} class="h-12 w-12 mb-4 text-muted" />
   <div>
     {title && <span class="mr-1 text-muted">{title}:</span>}
     <a href={to} target="_blank" rel="noindex noopener noreferrer">{text}</a>
   </div>
-</div>
+</li>
