--- a/src/components/sections/Contacts.astro
+++ b/src/components/sections/Contacts.astro
@@ -13,7 +13,7 @@ const {
   section: { id, title, subtitle, html: content },
 } = Astro.props as Props;
 
-const contacts = fetchContacts();
+const contacts = await fetchContacts();
 const {
   phones,
   voice: { whatsapp, telegram },
@@ -22,10 +22,10 @@ const {
 ---
 
 <PageSection id={id} title={title} subtitle={subtitle} content={content}>
-  <div class="grid gap-6 text-sm md:grid-cols-2 lg:grid-cols-4">
+  <ul class="grid gap-6 text-sm md:grid-cols-2 lg:grid-cols-4">
     <ContactItem icon="phone" to={utils.phoneUrl(phones[0])} title="Phone" text={utils.formatPhone(phones[0])} />
     <ContactItem icon="whatsapp" to={utils.whatsappUrl(whatsapp)} title="WhatsApp" text={utils.formatPhone(whatsapp)} />
     <ContactItem icon="telegram" to={utils.telegramUrl(telegram)} title="Telegram" text={telegram} />
     <ContactItem icon="envelope" to={`mailto:${emails[0]}`} title="E-mail" text={emails[0]} />
-  </div>
+  </ul>
 </PageSection>
