--- a/src/components/sections/ServiceItem.astro
+++ b/src/components/sections/ServiceItem.astro
@@ -9,10 +9,10 @@ import Image from '@/components/images/Image.astro';
 const { item: { title, content, image } } = Astro.props as Props;
 ---
 
-<div class="text-center">
+<li class="text-center">
   {image?.src && (
     <Image src={getImagePath(image.src)} alt={image.alt} classes="mb-4" caption={image.caption} />
   )}
   <h3 class="mb-4">{title}</h3>
   <div class="text-muted">{content}</div>
-</div>
+</li>
