--- a/src/components/sections/TestimonialItem.astro
+++ b/src/components/sections/TestimonialItem.astro
@@ -14,10 +14,10 @@ const src = getImagePath(image.src);
 const alt = image?.alt || title || content;
 ---
 
-<div class="text-center mb-12">
+<li class="text-center mb-12">
   {image?.src && <Image src={src} alt={alt} classes="mb-3" imgClasses="w-56 h-56 mx-auto border-4 rounded-full" caption={image.caption} />}
   <div class="mb-4 text-muted">{content}</div>
   <div class="text-sm text-muted before:content-['-']">
     {title}{subtitle && <cite>{`, ${subtitle}`}</cite>}
   </div>
-</div>
+</li>
