--- a/src/components/sections/Gallery.astro
+++ b/src/components/sections/Gallery.astro
@@ -2,6 +2,7 @@
 export interface Props {
   section: Section;
 }
+import '@/lib/photoswipe/photoswipe.css';
 import PageSection from '../PageSection.astro';
 import GalleryItem from './GalleryItem.astro';
 
@@ -9,9 +10,24 @@ const {
   section: { id, title, subtitle, html: content, items },
 } = Astro.props as Props;
 ---
-
 <PageSection id={id} title={title} subtitle={subtitle} content={content} classes="text-center bg-light">
-  <div class="grid gap-8 md:grid-cols-3 lg:grid-cols-6">
-    {items?.map((item) => <GalleryItem item={item} />)}
-  </div>
+  <ul id="gallery--simple" class="pswp-gallery grid gap-8 md:grid-cols-3 lg:grid-cols-6">
+    {items?.filter(({image}) => image?.src).map((item) => <GalleryItem item={item} />)}
+  </ul>
 </PageSection>
+
+<script hoist type="module">
+  import PhotoSwipeLightbox from '../../lib/photoswipe/photoswipe-lightbox.esm.js';
+
+  const lightbox = new PhotoSwipeLightbox({
+    // may select multiple "galleries"
+    gallery: '#gallery--simple',
+
+    // Elements within gallery (slides)
+    children: 'a',
+
+    // setup PhotoSwipe Core dynamic import
+    pswpModule: () => import('../../lib/photoswipe/photoswipe.esm.js'),
+  });
+  lightbox.init();
+</script>
