--- a/src/components/sections/GalleryItem.astro
+++ b/src/components/sections/GalleryItem.astro
@@ -4,27 +4,60 @@ export interface Props {
 }
 
 import getImagePath from '@/lib/getImagePath';
-import Image from '@/components/images/Image.astro';
+import escapeHTML from '@/lib/escapeHTML';
+import getImageFormats from '@/lib/getImageFormats';
+import { getMetadata, getSrcset } from '@/helpers/image-utils';
 
-const {
-  item: { title, subtitle, image },
-} = Astro.props as Props;
+const { item: { title, subtitle, image } } = Astro.props as Props;
+
+const src = getImagePath(image?.src || '');
+const quality = 90;
+
+const sizes = '';
+const classes = '';
+const imgClasses = '';
+
+const opts = {
+  widths: [null],
+  formats: getImageFormats(import.meta.env.IMAGE_FORMATS),
+  sharpWebpOptions: {
+    quality,
+  },
+  sharpAvifOptions: {
+    quality,
+  },
+};
+
+const { metadata, lowsrc, highsrc } = getMetadata(src, opts);
 ---
+<li class="gallery-item">
+  <a role="button" tabIndex={-1} class="gallery-box" href={highsrc.url}
+    data-pswp-width={highsrc.width}
+    data-pswp-height={highsrc.height}
+    target="_blank"
+  >
+    <picture>
+      {Object.values(metadata).map((imageFormat) => (
+        <source type={imageFormat[0].sourceType} srcset={getSrcset(imageFormat)} sizes={sizes} />
+      ))}
+      <img src={lowsrc.url} width={highsrc.width} height={highsrc.height} alt={escapeHTML(image?.alt)} loading="lazy" decoding="async" class={imgClasses}/>
+    </picture>
 
-<div className="gallery-item">
-  <a role="button" tabIndex={-1} class="gallery-box" href={'#'}>
-    {image?.src && <Image src={getImagePath(image.src)} alt={image.alt} caption={image.caption} />}
     <div class="gallery-box-caption">
       <div class="project-category text-white-50">{subtitle}</div>
       <div class="project-name">{title}</div>
     </div>
   </a>
-</div>
+</li>
 
-<style>
+<style lang="scss">
 .gallery-box {
   position: relative;
   display: block;
+  background-color: transparent;
+  &:hover {
+    color: #d6370c;
+  }
 }
 .gallery-box-caption {
   display: flex;
@@ -41,8 +74,9 @@ const {
   text-align: center;
   opacity: 0;
 
-  color: $white;
-  background: fade-out(blue, 0.1);
+  color: white;
+  background: rgba(244,98,58,.9);
+
   transition: opacity 0.25s ease;
   text-align: center;
 }
