--- a/src/components/sections/Gallery.astro
+++ b/src/components/sections/Gallery.astro
@@ -17,7 +17,7 @@ const {
 </PageSection>
 
 <script hoist type="module">
-  import PhotoSwipeLightbox from '../../lib/photoswipe/photoswipe-lightbox.esm.js';
+  import PhotoSwipeLightbox from '@/lib/photoswipe/photoswipe-lightbox.esm.js';
 
   const lightbox = new PhotoSwipeLightbox({
     // may select multiple "galleries"
