--- a/src/components/sections/GalleryItem.astro
+++ b/src/components/sections/GalleryItem.astro
@@ -19,7 +19,7 @@ const imgClasses = '';
 
 const opts = {
   widths: [null],
-  formats: getImageFormats(import.meta.env.IMAGE_FORMATS),
+  formats: getImageFormats(),
   sharpWebpOptions: {
     quality,
   },
