--- a/src/components/images/ArtImage.astro
+++ b/src/components/images/ArtImage.astro
@@ -29,7 +29,7 @@ const {
 const opts = {
   ...options,
   widths: [null],
-  formats: getImageFormats(import.meta.env.IMAGE_FORMATS),
+  formats: getImageFormats(),
   sharpWebpOptions: {
     quality,
   },
