--- a/src/components/sections/Gallery.astro
+++ b/src/components/sections/Gallery.astro
@@ -11,23 +11,18 @@ const {
 } = Astro.props as Props;
 ---
 <PageSection id={id} title={title} subtitle={subtitle} content={content} classes="text-center bg-light">
-  <ul id="gallery--simple" class="pswp-gallery grid gap-8 md:grid-cols-3 lg:grid-cols-6">
+  <div id="gallery--simple" class="pswp-gallery grid gap-1 md:grid-cols-3 lg:grid-cols-6">
     {items?.filter(({image}) => image?.src).map((item) => <GalleryItem item={item} />)}
-  </ul>
+  </div>
 </PageSection>
 
 <script hoist type="module">
   import PhotoSwipeLightbox from '@/lib/photoswipe/photoswipe-lightbox.esm.js';
 
   const lightbox = new PhotoSwipeLightbox({
-    // may select multiple "galleries"
     gallery: '#gallery--simple',
-
-    // Elements within gallery (slides)
     children: 'a',
-
-    // setup PhotoSwipe Core dynamic import
-    pswpModule: () => import('../../lib/photoswipe/photoswipe.esm.js'),
+    pswpModule: () => import('@/lib/photoswipe/photoswipe.esm.js'),
   });
   lightbox.init();
 </script>
