--- a/src/components/header/components/LanguageSwitch.astro
+++ b/src/components/header/components/LanguageSwitch.astro
@@ -148,7 +148,7 @@ const currentLocale = i18n.locales[locale];
 
 <script hoist type="module">
   import i18n from '@/config/i18n';
-  import { getLocale, saveLocale } from '@/lib/locale-utils.js';
+  import { getLocale, saveLocale } from '@/lib/locale-utils';
 
   const { defaultLocale, locales } = i18n;
 
